<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

    <string name="button_1">POPULAR MOVIES</string>
    <string name="button_2">SCORES APP</string>
    <string name="button_3">LIBRARY APP</string>
    <string name="button_4">BUILD IT BIGGER</string>
    <string name="button_5">XYZ READER</string>
    <string name="button_6">CAPSTONE: MY OWN APP</string>

    <string name="open_app">Opens the app</string>
</resources>
