<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:gravity="center_horizontal">

    <TextView android:text="@string/my_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/title_margin"
        android:textSize="@dimen/title_size"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@android:color/white"
        android:background="@color/twentyfit_dark"
        android:onClick="sendMessage"/>

</LinearLayout>
